@@ -1,5 +1,5 @@
 [fh]
-button-tooltip=__1__\n__2__
+button-tooltip=__1__\n__2__\n__CONTROL_STYLE_BEGIN__Middle-click__CONTROL_STYLE_END__ to place ghost in hand.
 tooltip-filters=__CONTROL_LEFT_CLICK__ to set filter.\n__CONTROL_RIGHT_CLICK__ to remove filter.
 tooltip-container-filters=__CONTROL_LEFT_CLICK__ to set filter.\n__CONTROL_RIGHT_CLICK__ to remove filter.\n__CONTROL_KEY_SHIFT__ + __CONTROL_LEFT_CLICK__ to set filter under all of this item.\n__CONTROL_KEY_CTRL__ + __CONTROL_LEFT_CLICK__ to set this filter on all valid slots.\n__CONTROL_KEY_CTRL__ + __CONTROL_KEY_SHIFT__ + __CONTROL_LEFT_CLICK__ to set this filter on [font=default-bold]all[/font] slots.\n(__CONTROL_KEY_SHIFT__ or __CONTROL_KEY_CTRL__) + __CONTROL_RIGHT_CLICK__ to remove this filter from all slots.
 tooltip-requests=__CONTROL_LEFT_CLICK__ to increase request by 1 stack.\n__CONTROL_RIGHT_CLICK__ to decrease request by 1 stack.\n__CONTROL_KEY_SHIFT__ + __CONTROL_LEFT_CLICK__ to increase request by 5 stacks.\n__CONTROL_KEY_SHIFT__ + __CONTROL_RIGHT_CLICK__ to decrease request by 5 stacks.\n__CONTROL_KEY_CTRL__ + __CONTROL_LEFT_CLICK__ to set request to fill container.\n__CONTROL_KEY_CTRL__ + __CONTROL_RIGHT_CLICK__ to remove request.
